# SafeStream_AI

./: .gitignore  Dockerfile  README.md  dqn_model.pth  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_dqn.py  validate-submission.sh
app/frontend/: index.html  script.js  styles.css
app/models/: toxicity_model.py
data/samples/: sample_data.py
server/: app.py
src/agent/: dqn_agent.py
src/env/: moderation_env.py
src/evaluation/: evaluate.py
src/nlp/: embeddings.py  preprocess.py
src/training/: run_training.py  train_rl.py
